# toolmik

./: .replit  README.md  config.yaml  docker-compose.yml  install.py  pyproject.toml  replit.nix  start.sh
app/: api.py  main.py
app/collectors/: __init__.py  mikrotik.py  qos.py  system.py  wan.py  wireless.py
app/utils/: __init__.py  alerting.py  auth.py  influx.py
app/web/: __init__.py  server.py
attached_assets/: Pasted--bin-bash-Auto-Install-Script-for-Network-Monitoring-System-Version-1-0-For-Ubuntu-22-04-LT-1741915754961.txt
config/grafana/: grafana.ini
dashboards/: mikrotik_overview.json  qos_analysis.json  system_performance.json  wan_monitoring.json  wireless_status.json
dashboards/static/: index.html
dashboards/static/css/: style.css
dashboards/static/js/: main.js
dashboards/templates/: alerts.html  device_detail.html  devices.html  index.html  layout.html  login.html  maps.html  reports.html  settings.html
data/influxdb/: influxd.bolt
data/influxdb/engine/data/b90d9fe8af397498/autogen/1/: fields.idx  fields.idxl
data/influxdb/engine/data/b90d9fe8af397498/autogen/1/index/0/: L0-00000001.tsl
data/influxdb/engine/data/b90d9fe8af397498/autogen/1/index/1/: L0-00000001.tsl
data/influxdb/engine/data/b90d9fe8af397498/autogen/1/index/2/: L0-00000001.tsl
data/influxdb/engine/data/b90d9fe8af397498/autogen/1/index/3/: L0-00000001.tsl
data/influxdb/engine/data/b90d9fe8af397498/autogen/1/index/4/: L0-00000001.tsl
data/influxdb/engine/wal/b90d9fe8af397498/autogen/1/: _00001.wal
(+3 files in other folders)
